src/css/index.css
:root {
  --color-00: #2d2d2d; /* black */
  --color-01: #393939; /* ... */
  --color-02: #515151;
  --color-03: #747369;
  --color-04: #a09f93;
  --color-05: #d3d0c8;
  --color-06: #e8e6df; /* ... */
  --color-07: #f2f0ec; /* white */
  --color-08: #f2777a; /* red */
  --color-09: #f99157; /* orange */
  --color-0A: #ffcc66; /* yellow */
  --color-0B: #99cc99; /* green */
  --color-0C: #66cccc; /* cyan */
  --color-0D: #6699cc; /* blue */
  --color-0E: #cc99cc; /* purple */
  --color-0F: #d27b53; /* brown */
}
html, body {
  box-sizing: border-box;
  width: 100%;
  min-width: 320px;
  max-width: 1000px;
  margin: auto;
}

body {
  color: var(--color-00);
  background: var(--color-06);
  font-family: 'Helvetica', 'Helvetica Neue', Arial, Verdana, sans-serif;
  line-height: 1.3;
  padding: 0.25em;
}

body, button, input {
  font-size: 14px;
}

@media (max-width: 400px) {
  body, button, input {
    font-size: 10px;
  }
}

#supply {
  margin-bottom: 1em;
}

/* ** CARD STYLES ** */
ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

#supply ul {
  display: flex;
  flex-wrap: wrap;
}

#supply ul li {
  flex: 1;
  max-width: 21%;
  min-width: 17%;
}

#supply ul#kingdom li {
  flex: 1;
  min-width: 21%;
}

li.pile, li.pile-placeholder, li.card {
  padding: 0.25em;
  margin: 0.15em;
  width: 8em;
}

li.pile, li.card {
  border-radius: 0.125em;
  border: 1px solid var(--color-00);
  background: var(--color-07);
  cursor: pointer;
}

li.pile-placeholder {
  border: 1px solid transparent;
  border-right-width: 3px;
}

li.pile {
  border-right-width: 3px;
  border-right-color: var(--color-02);
  border-right-style: double;
}

li.pile.selected-true, li.card.selected-true {
  border-color: var(--color-08);
}

li.pile.victory, li.card.victory {
  background: var(--color-0B);
}

li.pile.curse, li.card.curse {
  background: var(--color-0E);
}

li.pile.treasure-1, li.card.treasure-1 {
  background: var(--color-0F);
}

li.pile.treasure-2, li.card.treasure-2 {
  background: var(--color-05);
}

li.pile.treasure-3, li.card.treasure-3 {
  background: var(--color-09);
}

li.pile.count-0 {
  background: var(--color-03);
}

.cost-badge {
  background: var(--color-0A);
  display: inline-block;
  width: 1em;
  text-align: center;
  padding-top: 0.1em;
  border-radius: 0.5em;
}

.pile-count {
  color: var(--color-03);
  float: right;
}

/* ** LAYOUT ** */
#not-supply {
  display: flex;
  max-width: 100%;
}

#play-areas {
  flex: 2;
  display: flex;
}

#play-areas > div {
  flex: 1;
  max-width: 12em;
}

#info {
  flex: 1;
}

#turn-indicator, #action-buttons, #turn-state {
  margin-bottom: 1em;
}

